# dl-practis

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cpp.4E8187E1689B17D8.idx  my_lib.c.FFA73B1E055BCB6F.idx  my_lib.h.3A206D3AC882817A.idx
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/my_shared_lib/: CMakeLists.txt
lib/my_shared_lib/src/: my_lib.c  my_lib.h
scripts/: configure.sh
